create match adapted to user model

--- a/src/app/layouts/full/full.component.html
+++ b/src/app/layouts/full/full.component.html
@@ -24,11 +24,8 @@
         <!-- ============================================================== -->
         <!-- app header component - style you can find in header.scss / header.component.ts-->
         <!-- ============================================================== -->
-        <button mat-raised-button color="accent" routerLink="create-match">
-            <mat-icon>add</mat-icon>
-            <label>New Match</label>
-        </button>
-        <!-- <app-header></app-header> -->
+        
+        <app-header></app-header>
     </mat-toolbar>
     <!-- ============================================================== -->
     <!-- End Topbar - style you can find in pages.scss -->
