user can now report a match and admin can view the report list in his section, match parameter was_reported is also updated

--- a/src/app/material-component/admin-section/admin-section.component.html
+++ b/src/app/material-component/admin-section/admin-section.component.html
@@ -3,7 +3,7 @@
     <mat-card-content>
         <button mat-button type="button" class="block" color="primary">Create A Special Event</button>
         <br>
-        <button mat-button type="button" class="block" color="primary">Review Matches</button>
+        <button mat-button type="button" class="block" color="primary" routerLink="/reports">Review Matches</button>
         <br>
         <button mat-button type="button" class="block" color="primary">Review Requests</button>
         <br>
