--- a/src/app/material-component/dialog/dialog.component.html
+++ b/src/app/material-component/dialog/dialog.component.html
@@ -15,7 +15,7 @@
             </mat-form-field>
           </li>
           <li>
-            <button mat-raised-button (click)="openDialog()">Pick one</button>
+            <button mat-raised-button>Pick one</button>
           </li>
           <li *ngIf="animal">
             You chose:
