--- a/src/app/material-component/all-leagues/all-leagues.component.html
+++ b/src/app/material-component/all-leagues/all-leagues.component.html
@@ -23,10 +23,10 @@
                                 <h4 mat-line>{{league.max_players}}</h4>
                             </div>   -->   
                             <div>
-                                <button mat-raised-button (click)="openSnackBar()" *ngIf="isJoinable(league.id)"> Join League </button>
+                                <button *ngIf="isJoinable(league.id)" (click)="joinLeague(league.id)"> Join League </button>
                             </div> 
-                            <div>
-                                <button mat-raised-button color="warn" *ngIf="!isJoinable(league.id)" (click)="leaveLeague(league.id)"> Leave League </button>
+                            <div >
+                                <button color="warn" *ngIf="!isJoinable(league.id)" (click)="leaveLeague(league.id)"> Leave League </button>
                             </div> 
                         </mat-list-item>
         
