joining and leaving leagues works properly, player is set as active/inactive and displayed correcty

--- a/src/app/material-component/league/league.component.html
+++ b/src/app/material-component/league/league.component.html
@@ -28,7 +28,8 @@
                                 </div>
                                 <h4> {{ player.fullname }} </h4>
                             </mat-grid-tile>
-                            <mat-grid-tile [colspan]="1">{{ player.points }}</mat-grid-tile>
+                            <mat-grid-tile [colspan]="1" *ngIf="player.active">{{ player.points }}</mat-grid-tile>
+                            <mat-grid-tile [colspan]="1" *ngIf="!player.active">OUT</mat-grid-tile>
                         </div>
                         <!-- <mat-grid-tile
                             *ngFor="let tile of tiles"
